--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
                 <div class="collage-item small">
                     <img src="assets/IMG_4506-ec50cab5-3c2e-47e0-8993-6acd905bf7f6.png" alt="APPNA Convention">
                 </div>
+                <div class="collage-item small">
+                    <img src="assets/terry-college-presentation.png" alt="Presenting at UGA Terry College of Business">
+                </div>
             </div>
         </section>
 
