text change momentum

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <ul>
                         <li>Tight-knit team of 3 based in the US/Remote</li>
                         <li>Organic beta waitlist of 200+ users</li>
-                        <li>Strategic VC roadmap with accelerator applications (YC/Neo) for Summer 2026</li>
+                        <li>Strategic VC roadmap with accelerator applications for Summer 2026</li>
                     </ul>
                 </div>
 
